--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.4.0",
+    "@types/nodemailer": "^6.4.15",
+    "prisma": "^5.18.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
-    "env-var": "^7.5.0"
+    "env-var": "^7.5.0",
+    "mongoose": "^8.5.4",
+    "nodemailer": "^6.9.14"
   }
 }
